--- a/MorrisPhotos.Web/Views/Shared/_Layout.cshtml
+++ b/MorrisPhotos.Web/Views/Shared/_Layout.cshtml
@@ -70,6 +70,11 @@
                     </ul>
                 </div>
             </div>
+            <div class="extra-nav">
+                <ul>
+                    <li class="nav-toggle"><a href="#" data-toggle="collapse" data-target=".inner-navigation"><span class="menu-item-span"><i class="ti-menu"></i></span></a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
