--- a/MorrisPhotos.Web/Views/Shared/_Layout.cshtml
+++ b/MorrisPhotos.Web/Views/Shared/_Layout.cshtml
@@ -107,7 +107,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="copyright">
-                                <p>&copy; 2016-@DateTime.Now.Year MorrisPhotos.com, All Rights Reserved</p>
+                                <p>
+                                    &copy; 2016-@DateTime.Now.Year MorrisPhotos.com, All Rights Reserved<br />
+                                    Made with &#10084; by <a href="https://twitter.com/TonyTalksTech" target="_blank">Tony Morris</a>
+                                </p>
                             </div>
                         </div>
                     </div>
