--- a/MorrisPhotos.Web/Views/Shared/_Layout.cshtml
+++ b/MorrisPhotos.Web/Views/Shared/_Layout.cshtml
@@ -8,10 +8,7 @@
     <meta name="author" content="Tony Morris" />
     <title>@ViewData["Title"] - MorrisPhotos.com</title>
 
-    <link rel="shortcut icon" href="~/images/favicon.png">
-    <link rel="apple-touch-icon" href="~/images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="~/images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="~/images/apple-touch-icon-114x114.png">
+    @Html.Partial("_Favicons")
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600%7cPlayfair+Display:400i" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="~/css/plugins.min.css" rel="stylesheet">
